--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,12 +2,86 @@
 <html ng-app="app" lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Angular App</title>
+  <title>Angular Chat App</title>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
   <base href="/">
 </head>
 <body>
-  Hello, World
+
+<div class="myflex">
+
+    <nav class="navbar navbar-fixed-top">
+        <div>
+            <h3>Chatterbox App</h3>
+        </div>
+    </nav>
+    <div class="container content">
+        <div id="messages" class="messages">
+            <ul>
+                <li>
+                    <span class="left">Bye</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Hello</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Are you there?</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="right">Yes I am here</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Bye</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Hello</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Are you there?</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="right">Yes I am here</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Thanks for accepting my friend request</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="right">You Welcome</span>
+                    <div class="clear"></div>
+                </li>
+                <li>
+                    <span class="left">Bye</span>
+                    <div class="clear"></div>
+                </li>
+            </ul>
+            <div class="clear"></div>
+        </div>
+    </div>
+
+    <footer class="row-footer">
+        <div class="container">
+            <div class="form">
+                <div>
+                <div class="col-xs-10 input-box">
+                    <textarea placeholder="Enter message"></textarea>
+                </div>
+                    <a class="col-xs-2 btn"><i class="glyphicon glyphicon-send"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+   </div>
 </body>
 </html>
