Update public path

--- a/resource/index.html
+++ b/resource/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
   <base href="/">
-<link href="/app.f771ed10246d8d2bff37.css" rel="stylesheet"></head>
+<link href="app.cfbaa815bf1978fae6fe.css" rel="stylesheet"></head>
 <body ng-app="appChat">
 
 <div class="myflex">
@@ -50,5 +50,5 @@
         </div>
     </footer>
 </div>
-<script src="/bundle.js"></script></body>
+<script src="bundle.js"></script></body>
 </html>
