--- a/resource/index.html
+++ b/resource/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
   <base href="/">
-<link href="./app.d2debba4e30f902c0fa0.css" rel="stylesheet"></head>
+<link href="/chatterbox/resource/app.9f47e52b6c731fd7b149.css" rel="stylesheet"></head>
 <body ng-app="appChat">
 
 <div class="myflex">
@@ -50,5 +50,5 @@
         </div>
     </footer>
 </div>
-<script src="./bundle.js"></script></body>
+<script src="/chatterbox/resource/bundle.js"></script></body>
 </html>
