--- a/src/public/index.html
+++ b/src/public/index.html
@@ -38,15 +38,15 @@
 
     <footer class="row-footer" ng-controller="sendController as send">
         <div class="container">
-            <div class="form">
+            <form class="form" ng-submit="send.transmitMessage(send.msg)">
                 <div>
                     <div class="col-xs-10 input-box">
-                        <textarea ng-model="send.msg" placeholder="Enter message"></textarea>
+                        <input type="text" ng-model="send.msg" placeholder="Enter message">
                     </div>
-                        <a class="col-xs-2 btn">
-                            <i class="glyphicon glyphicon-send" ng-click="send.transmitMessage(send.msg)"></i></a>
+                    <a class="col-xs-2 btn">
+                        <i class="glyphicon glyphicon-send" ng-click="send.transmitMessage(send.msg)"></i></a>
                 </div>
-            </div>
+            </form>
         </div>
     </footer>
 </div>
